--- a/src/chay_stakany.html
+++ b/src/chay_stakany.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="✔Асортимент пропонованого чаю здатний задовольнити вимогливі смаки ваших клієнтів ✔У нашому асортименті представлений як пакетований чай, так і розсипний">
-    <meta name="keywords" content="bianchi, чай для хорека, чай, липтон">
+    <meta name="description" content="Золоті стакани компанії Bianchi Professional впізнавані споживачем у багатьох містах України 
+    | Стакани виробляються з міцного якісного картону із застосуванням зовнішньої ламінації |
+   В асортименті представлені різні об'єми.">
+    <meta name="keywords" content="bianchi, кава, стакани для кави, стакани для чаю">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Чай для ХоРеКа</title>
+    <title>Стакани для кави і чаю | Стакани для вендінга та ХоРеКа</title>
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -189,8 +190,7 @@
                                     <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
                                     <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -203,189 +203,80 @@
         </div>
     </nav>
     <div class="separator">
-        <h3>Чай</h3>
-    </div>
-    <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="description container">
-        <div class="row">
-            <div class="col"></div>
-            <div class="col-10">
-                <h5 class="text-center fw-bold"> <small>Ми пропонуємо зовсім не пачку чаю, а послугу, в рамках якої
-                        кінцевий споживач отримує свою чашку чаю.</small> </h5>
-                <ul>
-                    <small>
-                        <li>
-                            Асортимент пропонованого чаю здатний задовольнити вимогливі смаки ваших клієнтів.
-                        </li>
-                        <li>
-                            У нашому асортименті представлений як пакетований чай, так і розсипний.
-                        </li>
-                    </small>
-                </ul>
-            </div>
-            <div class="col"></div>
-        </div>
+        <h3>Стакани, цукор</h3>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
     <div class="container hr-line"></div>
     <div class="container cards">
-        <!-- <div class="row">
-            <div class="col col-auto col-sm-6 col-md-4 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="./img/chay/Forest_Fruit.webp" class="card-img-top" alt="Forest fruit">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Фасовка:<br></b>25 пакетиків</li>
-                                <br>
-                                <li><b>Маса нетто:<br></b>45 гр.</li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Чай Lipton "Forest Fruit" чорний</h3>
-                        <small>
-                            <p class="lh-sm">Це преміальна лінійка чаю Lipton високої якості спеціально для закладів
-                                HoReCa і кав'ярень.</p>
-                            <p class="lh-sm"><b> Lipton "Forest Fruit"</b> має насичений аромат лісових ягід і м'який,
-                                не нав'язливим смак. Відмінно освіжає і бадьорить.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-auto col-sm-6 col-md-4 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="./img/chay/Green_Tea_Citrus.webp" class="card-img-top" alt="Green Tea Citrus">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Фасовка:<br></b>25 пакетиків.</li>
-                                <br>
-                                <li><b>Маса нетто:<br></b>45 г</li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Чай Lipton "Green Tea Citrus" зелений</h3>
-                        <small>
-                            <p class="lh-sm">Це преміальна лінійка чаю Lipton високої якості спеціально для закладів
-                                HoReCa і кав'ярень.</p>
-                            <p class="lh-sm"> <b> Lipton "Green Tea Citrus"</b> відмінне поєднання освіжаючого зеленого
-                                чаю з м'якою кислинкою лимона. Прекрасно тонізує і бадьорить.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-            <div class="col col-auto col-sm-6 col-md-4 mb-1">
-                <div class="card hover-text-one">
-                    <figure class="effect-text-three">
-                        <img src="./img/chay/With_Mint.webp" class="card-img-top" alt="With Mint">
-                        <figcaption class="goods">
-                            <ul class="lh-sm">
-                                <li><b>Фасовка:<br></b>25 пакетиків.</li>
-                                <br>
-                                <li><b>Маса нетто:<br></b>45 гр.</li>
-                            </ul>
-                        </figcaption>
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Чай Lipton "With Mint" зелений</h3>
-                        <small>
-                            <p class="lh-sm">Це преміальна лінійка чаю Lipton високої якості спеціально для закладів
-                                HoReCa і кав'ярень.</p>
-                            <p class="lh-sm"><b>Lipton "With Mint"</b> - цінується по всьому світу за приємний смак і
-                                аромат. Це визнана класика чайної колекції. У поєднанні зелений чай і м'ята дають
-                                воістину чудовий результат. Вони ніби створені один для одного.</p>
-                        </small>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    </div>
-    <div class="container cards">
         <div class="row">
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="./img/chay/assorti.webp" class="card-img-top combo" alt="Totti Emerald Leaf">
+                        <img src="./img/chay_sahar/assorti.webp" class="card-img-top combo" alt="Tea">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Склад:<br></b>чай зелений<br>байховий<br>китайський<br>крупнолис-<br>товий.</li>
+                                <li><b>Великий<br>асотртимент<br>смаків</b></li>
                                 <br>
-                                <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li>
+                                <li><b>Об'єм стакану:<br></b>250 мл</li>
+                                
+                                <!-- <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li> -->
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
                         <h3 class="text-center">Чай Bianchi в асортименті та картонний фірмовий стакан</h3>
                         <small>
-                            <p class="lh-sm">Чай у пакетиках в індивідуальному конвертику. <br>
-                                Повний об’єм стакану: 250мл <br>
-                                Колекція смаків задовольнить будь якого вибагливого поцінувача чаю!</p>
+                            <p class="lh-sm">Чай у пакетиках в індивідуальному конвертику.</p>
+                                <p class="lh-sm">Колекція смаків задовольнить будь якого вибагливого поцінувача чаю!</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="./img/chay/TottiFruit.webp" class="card-img-top combo" alt="Totti Fruit">
+                        <img src="./img/chay_sahar/stakan.webp" class="card-img-top combo" alt="Cup">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Склад:<br></b>каркаде,<br>фруктова<br>суміш<br>"малина-<br>журавлина".</li>
+                                <li><b>Об'єм:<br></b>100-300 мл</li>
                                 <br>
-                                <li><b>Фасовка:<br></b>пакет (25х2 г),<br>лист (250 г) </li>
+                                <li><b>Ламінування:<br></b>одностороннє<br>(зовнішнє)</li>
+                                <br>
+                                <li><b>Макс.<br>температура:<br></b>до 90°С</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Чай Totti "Mellow Berries" фруктовий</h3>
+                        <h3 class="text-center">Картонні стакани</h3>
                         <small>
-                            <p class="lh-sm">Елітний ягідний чайний напій з яскравим неповторним смаком і м'яким
-                                ароматом стиглих фруктів.</p>
+                            <p class="lh-sm">Золоті стакани компанії Bianchi Professional впізнавані споживачем у
+                                багатьох містах України.</p>
+                            <p class="lh-sm">Стакани виробляються з міцного якісного картону із застосуванням зовнішньої
+                                ламінації.</p>
+                            <p class="lh-sm">В асортименті представлені різні об'єми.</p>
                         </small>
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
+            <div class="col col-auto col-md-4 mb-1">
                 <div class="card hover-text-one">
                     <figure class="effect-text-three">
-                        <img src="./img/chay/TottiMoonlight.webp" class="card-img-top combo"
-                            alt="Totti Moonlight Sonata">
+                        <img src="./img/chay_sahar/sugar.webp" class="card-img-top combo" alt="Sugar">
                         <figcaption class="goods">
                             <ul class="lh-sm">
-                                <li><b>Склад:<br></b>чай
-                                    зелений<br>байховий<br>китайський<br>крупнолисто-<br>вий,<br>пелюстки<br>волошок,<br>лимонник.
-                                </li>
+                                <li><b>Розмір стіка:<br></b>66х50 мм</li>
                                 <br>
-                                <li><b>Фасовка:<br></b>лист (250 г) </li>
+                                <li><b>Вага:<br></b>4 г</li>
+                                <br>
+                                <li><b>Допустиме <br> відхилення: <br> маси нетто:<br></b>мінус 9%</li>
                             </ul>
                         </figcaption>
                     </figure>
                     <div class="card-body">
-                        <h3 class="text-center">Чай Totti "Moonlight Sonata" трав'яний</h3>
-                        <small>
-                            <p class="lh-sm">Цей вишуканий чай дивним чином поєднує в собі п'янкий аромат квітів і
-                                фруктів з чарівною свіжістю лимонника. Вишукане задоволення для справжніх цінителів
-                                трав'яного чаю.</p>
-                        </small>
+                        <h3 class="text-center">Цукор білий <br> порційний в стіках</h3>
                     </div>
                 </div>
             </div>
-            <div class="col col-auto col-sm-6 col-md-3 mb-1">
-                <div class="card">
-                    <figure>
-                        <img src="./img/chay/pack.webp" class="card-img-top" alt="Filter Packet">
-                    </figure>
-                    <div class="card-body">
-                        <h3 class="text-center">Фільтр-пакети для заварювання чаю</h3>
-                        <small>
-                            <p class="lh-sm">Фільтр-пакети дуже зручні для заварювання всіх видів розсипних чаїв, а
-                                також трав'яних сумішей.</p>
-                        </small>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
