--- a/src/contacty.html
+++ b/src/contacty.html
@@ -191,8 +191,7 @@
                                     <li><a class="dropdown-item" href="./moloko_shokolad.html">Капучино, шоколад,
                                             молоко</a></li>
                                     <li><a class="dropdown-item" href="./syropi.html">Сиропи</a></li>
-                                    <li><a class="dropdown-item" href="./chay.html">Чай</a></li>
-                                    <li><a class="dropdown-item" href="./stakany.html">Стакани, цукор</a></li>
+                                    <li><a class="dropdown-item" href="./chay_stakany.html">Чай, стакани, цукор</a></li>
                                 </ul>
                             </li>
                         </ul>
