Добавлена русская версия

--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -197,6 +197,12 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
+                    <li class="nav-item">
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-outline-success active fw-bold" href="#">UA</a>
+                            <a class="btn btn-outline-success fw-bold" href="./ru/kofemolki_ru.html">RU</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
