--- a/src/ru/vending_ru.html
+++ b/src/ru/vending_ru.html
@@ -438,11 +438,11 @@
                     можете за
                     посиланнями нижче або відсканувавши QR код безпосередньо з апарату.</p>
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col col-md-6">
                         <a href="https://apps.apple.com/ru/app/prostopay/id1377010486"><img
                                 src="../img/vending/AppStore.webp" class="p-3 app" alt="AppStore"></a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col col-md-6">
                         <a href="https://play.google.com/store/apps/details?id=net.prostopay.wallet"><img
                                 src="../img/vending/GooglePlay.webp" class="p-3 app" alt="GooglePlay"></a>
                     </div>
