--- a/src/contacty.html
+++ b/src/contacty.html
@@ -201,8 +201,8 @@
                     </li>
                     <li class="nav-item">
                         <div class="btn-group" role="group">
-                            <a class="btn btn-outline-success active fw-bold" href="#">UA</a>
-                            <a class="btn btn-outline-success fw-bold" href="./ru/contacty_ru.html">RU</a>
+                            <a class="btn btn-outline-success active" href="#">UA</a>
+                            <a class="btn btn-outline-success" href="./ru/contacty_ru.html">RU</a>
                         </div>
                     </li>
                 </ul>
