--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -200,8 +200,8 @@
                     </li>
                     <li class="nav-item">
                         <div class="btn-group" role="group">
-                            <a class="btn btn-outline-success active fw-bold" href="#">UA</a>
-                            <a class="btn btn-outline-success fw-bold" href="./ru/dlya_cafe_restoranov_ru.html">RU</a>
+                            <a class="btn btn-outline-success active" href="#">UA</a>
+                            <a class="btn btn-outline-success" href="./ru/dlya_cafe_restoranov_ru.html">RU</a>
                         </div>
                     </li>
                 </ul>
