--- a/src/ru/dlya_magazinov_i_setey_ru.html
+++ b/src/ru/dlya_magazinov_i_setey_ru.html
@@ -199,8 +199,8 @@
                     </li>
                     <li class="nav-item">
                         <div class="btn-group" role="group">
-                            <a class="btn btn-outline-success  fw-bold" href="../dlya_magazinov_i_setey.html">UA</a>
-                            <a class="btn btn-outline-success active fw-bold" href="#">RU</a>
+                            <a class="btn btn-outline-success" href="../dlya_magazinov_i_setey.html">UA</a>
+                            <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
                     </li>
                 </ul>
